# tfm_ode_bullet

./: .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  clone_external.sh
cmake/: obvcliphelpers.cmake
include/: obconfig.hpp  oblog.hpp
media/: obugre.material  obvclip.material
obugre/: CMakeLists.txt
obugre/apps/: bigtest.cpp  constrainttest.cpp  obvcliptest.cpp  obvcliptest2.cpp  performancevclip.cpp  sphere.cpp  twoboxes.cpp
obugre/include/: body.hpp  configure_obugre.h.in  engine.hpp  looper.hpp  renderer.hpp  system.hpp
obugre/memoria/: comparativa1.cpp  comparativa1.py  comparativa2.cpp  comparativa2.py  comparativa3.cpp  comparativa4.cpp  comparativa4.py  comparativa5.cpp  comparativa5.py  performance_cache_nocache.cpp  performance_cache_nocache.py  performance_vclip_ode_bullet.cpp  performance_vclip_ode_bullet.py
obugre/src/: body.cpp  body_debug.cpp  body_debug.hpp  btConvexConvexVclipAlgorithm.cpp  btConvexConvexVclipAlgorithm.hpp  bullet_engine.cpp  bullet_engine.hpp  engine.cpp  engine_logger.cpp  looper.cpp  objectTextDisplay.cpp  objectTextDisplay.hpp  ode_engine.cpp  ode_engine.hpp  renderer.cpp  system.cpp
obugre/tests/: test_obugre.cpp
obvclip/: CMakeLists.txt
obvclip/apps/: ogrebasic.cpp  showcube.cpp  testvclip.cpp  twocomplex.cpp  twocubes.cpp  vclipstandalone.cpp
obvclip/include/: contacts.hpp  polytope.hpp  polytope_examples.hpp  vclip.hpp
obvclip/memoria/: analisis1.cpp  analisis2.cpp  analisis3.cpp  contactos.cpp
obvclip/src/: clip_utils.hpp  contacts.cpp  polytope.cpp  polytope_examples.cpp  vclip.cpp
obvclip/tests/: CMakeLists.txt  test_convex_polytope.cpp  test_cpp.cpp  test_eigen.cpp  test_qhull.cpp  test_vclip.cpp
obvclip/tests/data/: cube.txt  prism20.txt  prism6.txt  tetrahedron.txt
obvclip/tools/: MovableText.cpp  MovableText.hpp  ogrevclip_app.cpp  ogrevclip_app.hpp
spikes/: CMakeLists.txt  clock.cpp  obugre.cpp
